# book-store

./: Dockerfile  README.md  compose.yaml  example.env  k8s.yaml  pyproject.toml
.github/workflows/: python-app.yml
backend/: settings.py
backend/api/: book.py  schemas.py
backend/api/v1/auth/: api.py  schemas.py
backend/api/v1/books/: api.py  schemas.py
backend/api/v1/users/: api.py  schemas.py
backend/database/: auth.py  books.py  manager.py  schemas.py  users.py
backend/security/: access.py  token.py  token_manager.py
backend/services/: app.py  auth.py  books.py  users.py
backend/utils/: logs.py
frontend/: package-lock.json
frontend/app/(tabs)/: index.tsx
migrations/: env.py
tests/: app.py  test_smoke.py
